--- a/docker-compose.background.yml
+++ b/docker-compose.background.yml
@@ -1,26 +1,22 @@
 version: '3'
 services:
-  validator_service:
-    image: infernocommunity/fhir-validator-service
-    # Update this path to match your directory structure
-    volumes:
-      - ./lib/inferno_template/igs:/home/igs
-  fhir_validator_app:
-    image: infernocommunity/fhir-validator-app
-    depends_on:
-      - validator_service
+  hl7_validator_service:
+    image: infernocommunity/inferno-resource-validator
     environment:
-      EXTERNAL_VALIDATOR_URL: http://localhost/validatorapi
-      VALIDATOR_BASE_PATH: /validator
+      # Defines how long validator sessions last if unused, in minutes:
+      # Negative values mean sessions never expire, 0 means sessions immediately expire
+      SESSION_CACHE_DURATION: -1
+    volumes:
+      - ./lib/pacio_test_kit/igs:/home/igs
   nginx:
     image: nginx
     volumes:
       - ./config/nginx.background.conf:/etc/nginx/nginx.conf
     ports:
       - "80:80"
-    command: [nginx, '-g', 'daemon off;']
-    depends_on:
-      - fhir_validator_app
+    command: [ nginx, '-g', 'daemon off;' ]
+    # depends_on:
+    #   - fhir_validator_app
   redis:
     image: redis
     ports:
