--- a/docker-compose.background.yml
+++ b/docker-compose.background.yml
@@ -1,13 +1,12 @@
 version: '3'
 services:
-  hl7_validator_service:
-    image: infernocommunity/inferno-resource-validator
+  fhir_validator_app:
+    image: infernocommunity/fhir-validator-app
+    depends_on:
+      - hl7_validator_service
     environment:
-      # Defines how long validator sessions last if unused, in minutes:
-      # Negative values mean sessions never expire, 0 means sessions immediately expire
-      SESSION_CACHE_DURATION: -1
-    volumes:
-      - ./lib/pacio_test_kit/igs:/home/igs
+      EXTERNAL_VALIDATOR_URL: http://localhost/validatorapi
+      VALIDATOR_BASE_PATH: /validator
   nginx:
     image: nginx
     volumes:
@@ -15,8 +14,8 @@ services:
     ports:
       - "80:80"
     command: [ nginx, '-g', 'daemon off;' ]
-    # depends_on:
-    #   - fhir_validator_app
+    depends_on:
+      - fhir_validator_app
   redis:
     image: redis
     ports:
@@ -24,3 +23,14 @@ services:
     volumes:
       - ./data/redis:/data
     command: redis-server --appendonly yes
+  hl7_validator_service:
+    image: infernocommunity/inferno-resource-validator:1.0.52
+    environment:
+      # Defines how long validator sessions last if unused, in minutes:
+      # Negative values mean sessions never expire, 0 means sessions immediately expire
+      SESSION_CACHE_DURATION: -1
+    volumes:
+      - ./lib/davinci_crd_test_kit/igs:/home/igs
+      # To let the service share your local FHIR package cache,
+      # uncomment the below line
+      # - ~/.fhir:/home/ktor/.fhir
