--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,10 @@ services:
     command: bundle exec sidekiq -r ./worker.rb
     depends_on:
       - redis
-  hl7_validator_service:
+  fhir_validator_app:
     extends:
       file: docker-compose.background.yml
-      service: hl7_validator_service
+      service: fhir_validator_app
   nginx:
     extends:
       file: docker-compose.background.yml
@@ -29,3 +29,7 @@ services:
     extends:
       file: docker-compose.background.yml
       service: redis
+  hl7_validator_service:
+    extends:
+      file: docker-compose.background.yml
+      service: hl7_validator_service
